$Id: Changes,v 1.60 2007-04-18 11:19:10 mike Exp $

Revision history for Perl extension Net::Z3950::ZOOM.

1.19  (IN PROGRESS)
	- Set version number for Net::Z3950 to 0.99 -- less than the
	  1.0 version number that will be used when it successfully
	  emulates the old Net::Z3950 module, but superseding the last
	  release, 0.51, of that module.
	- Include samples/zoom/zdump.pl in distribution.
	- Add "irspy" namespace to samples/zoom/zselect

1.18  Mon Feb 26 14:57:48 GMT 2007
	- When a connection is in asynchronous mode, failing
	  operations (search, scan, etc.) no longer throw exceptions.
	  This is because the event-loop in asychronous applications
	  needs to check for errors anyway, in case the server has
	  returned high-level diagnostics such as "unsupported use
	  attribute".  So this check within the event-loop is now the
	  only place where error-checking need be done.
	- Add new public ZOOM::Connection() function, check(), which
	  throws an exception if an error is pending (even if the
	  connection is asynchronous).
	- New YAZ logging level, "zoom_check", notes when errors are
	  detected and either left unreported (asynchronous
	  connections) or thrown as exception (synchronous).

1.17  Thu Feb 22 20:38:45 GMT 2007
	- Change Net::Z3950::ZOOM::event() to allocate its array of
	  connection pointers dynamically, so there is no longer an
	  arbitrary limit of 100.
	- New connection-level option "_check_debug" emits messages on
	  standard error when checking a connection find an error that
	  is about to result in throwing an exception.  There is no
	  reason for you ever to use this, though -- pretend you don't
	  know about it.

1.16  Tue Jan 16 11:18:34 GMT 2007
	- Require version 2.1.41 or better of YAZ, so that Init
	  Response options are available using
	  $conn->option("init_opt_sort") etc.
	- Include samples/zoom/zhello.pl to exercise these options.
	- Add ZOOM_connection_peek_event() and $conn->peek_event().