@@ -1,4 +1,4 @@
-# $Id: ZOOM.pod,v 1.42 2007-02-26 14:40:01 mike Exp $
+# $Id: ZOOM.pod,v 1.43 2007-05-09 12:03:52 mike Exp $
 
 use strict;
 use warnings;
@@ -304,6 +304,15 @@ C<error_x()>
 returns all four at once.
 
 See the C<ZOOM::Exception> for the interpretation of these elements.
+
+=head4 exception()
+
+ die $conn->exception();
+
+C<exception()> returns the same information as C<error_x()> in the
+form of a C<ZOOM::Exception> object which may be thrown or rendered.
+If no error occurred on the connection, then C<exception()> returns an
+undefined value.
 
 =head4 check()
 
